packages/example/content/boomerang-cicd/7.0.0/how-to-guide/09.modes-and-docker.md
---
title: Mode is Docker
index: 9
---

# Docker mode

The Boomerang CI Docker mode will build and push a docker container to the private Boomerang Docker registry.

You can use this mode for [multi-stage dockerfile](https://docs.docker.com/develop/develop-images/multistage-build/) builds which are a recommended way to optimize Dockerfiles.

## Boomerang Properties

The following summarizes the properties that can be used in conjunction with `mode=docker`. These are recommended to be set at the Stage or Version property scope.

The below is a sample file `.boomerang.properties` file.

```
#General
mode=docker

#Slack Notifications
notifications.type=slack
notifications.slack.channel=
notifications.slack.dm=

#Filtering
filter.target=tag
filter.expression=^(\d+\.)?(\d+\.)?(\*|\d+)$

#Docker specific parameters
docker.image.name=
```

## Build Args

The following build args are available to the

| Build Argument | Description |
| --- | --- |
| `BMRG_TAG` | The version for the current boomerang component build |
| `https_proxy`, `http_proxy`, `HTTP_PROXY`, `HTTPS_PROXY` | Proxy server parameters |
| `NO_PROXY`, `no_proxy` | The no proxy parameters |
| `ART_USER` | Boomerang Lib Artifactory User |
| `ART_PASSWORD` | Boomerang Lib Artifactory Password |
| `ART_URL` | Boomerang Lib Artifactory URL |

## Prerequisites

### Docker

A `Dockerfile` is required to be present in the root directory of the repository for the build to be successful.

A sample is as follows.

```
FROM openjdk:8-jre-alpine
VOLUME /tmp
EXPOSE 8080
ADD target/service.jar
RUN sh -c 'touch /service.jar'
ENV JAVA_OPTS=""
ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /service.jar" ]
```

## Advanced Integrations

### NPM Authentication

NPM reads authentication from a `.npmrc` file, by adding the following snippet the Docker container will be able to read from the Boomerang Lib npm repository. This is required if you are using any of the Boomerang frameworks or if you have used Boomerang CICD to package your custom packages.

```
RUN apk add --no-cache --virtual .build-deps curl && \
    curl -k -v -u $ART_USER:$ART_PASSWORD $ART_URL/api/npm/boomeranglib-npm/auth/boomerang -o .npmrc && \
    yarn install && \
    rm -f .npmrc && \
    apk del .build-deps
```

### Maven Authentication

Maven reads authentication from a `settings.xml` file in `$HOME/.m2` directory, by adding the following snippet the Docker container will be able to read from the Boomerang Lib Java and Boomerang Lib Maven repositories. This is required if you are using any of the Boomerang frameworks or if you have used Boomerang CICD to package your custom packages.

```
RUN mkdir -p ~/.m2 && \
    cat >> ~/.m2/settings.xml <<EOL
<settings>
 <servers>
   <server>
     <id>boomeranglib-maven</id>
     <username>$ART_USER</username>
     <password>$ART_PASSWORD</password>
   </server>
 </servers>
 <localRepository>~/.m2/repository</localRepository>
</settings>
EOL
```

### Java Compilation

Boomerang CICD workers communicate with external repositories using a forward proxy. As such, if you compile Java source code as part of your Docker containerization steps you will need to correctly configure JAVA_OPTS using the build args listed above.  This will ensure dependencies can be pulled down from both public and Boomerang hosted Maven repositories.

A sample using Linux shell is as follows.

```
if [ -n "$HTTP_PROXY" ]
then
	# Get the host and port from the http provy env var
	proxy_host=$(echo $HTTP_PROXY | awk -F ":" '{ print substr($2, 3) }')
	proxy_port=$(echo $HTTP_PROXY | awk -F ":" '{ print $3 }')

	# Add proxy host and proxy ports
	JAVA_OPTS="-Dhttp.proxyHost=$proxy_host -Dhttps.proxyHost=$proxy_host -Dhttp.proxyPort=$proxy_port -Dhttps.proxyPort=$proxy_port"

	# Add no proxy list (if this exists)
	if [ -n "$NO_PROXY" ]
	then
		no_proxy=`echo $NO_PROXY | sed s/\,/\|/g`
		JAVA_OPTS="$JAVA_OPTS -Dhttp.nonProxyHosts=$no_proxy"
	fi
fi

export $JAVA_OPTS
```
